# dotfiles

./: .gitignore  chrome-flags.conf  hypr  starship-claude.sh  starship.toml
bacon/: prefs.toml
bat/: config
claude-powerline/: config.json
claude-starship-rs/: Cargo.toml
claude-starship-rs/src/: colors.rs  formatters.rs  git.rs  history.rs  icons.rs  input.rs  lib.rs  main.rs  renderer.rs  segments.rs
claude-starship-rs/src/git/: branch_status.rs  last_commit.rs  repo_name.rs  tracking.rs
claude-starship-rs/src/segments/: context.rs  directory.rs  language.rs  model.rs  reset_time.rs  session_time.rs
erdtree/: .erdtree.toml
fish/: config.fish  fish_variables
fish/completions/: claude.fish  erd.fish  ruff.fish  shuttle.fish
fish/functions/: b0.fish  b1.fish  br.fish  cat.fish  cd.fish  code.fish  dy.fish  kssh.fish  ls.fish  mpv-ani.fish  mpv.fish  mpvhdr.fish  nvidia-run.fish  primusrun.fish  ssh.fish  vim.fish  webmd.fish  wezterm.fish
git-last-commit/: Cargo.toml
jupyter/: .gitignore  jupyter_server_config.py
kitty/: colors-matugen.conf  colors-wallust.conf  colors.conf  kitty.conf  kitty.conf.bak  tab_bar.py
mpv/: mpv.conf
mpv/scripts/: show-metadata.lua  sponsorblock_minimal.lua
mpv/watch_later/: 5816D8CD3904702885A7B0588EC153BB  8DB08223E46EABC47595108A90798339
nvim/: lazy-lock.json  lazyvim.json
paru/: paru.conf
sccache/: config
tmux/: tmux.conf
wezterm/: cursor.lua  fonts.lua  keymaps.lua  launch_menu.lua  ssh.lua  startup.lua  tabbar.lua  wezterm.lua  window.lua
yt-dlp/: config
zellij/: config.kdl
(+14 files in other folders)
